# astra-ai

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  models.py  schemas.py  security.py
backend/app/agents/: planner_agent.py  summarizer_agent.py
backend/app/api/v1/routers/: __init__.py  memory.py  research.py  sources.py
backend/app/core/: config.py
backend/app/models/: __init__.py  memory.py  research.py
backend/app/repositories/: research_repository.py
backend/app/schemas/: memory.py  research.py  source.py
backend/app/services/: citations.py  memory_service.py  memory_store.py  pii_redactor.py  planner.py  reporting.py  research_service.py  scraper.py  search.py  source_service.py  summarizer.py  tool_registry.py  validator.py
backend/app/tools/: scraper_tool.py  web_search_tool.py
backend/app/utils/: citations.py
backend/app/validators/: source_validator.py
backend/tests/: conftest.py  test_api.py  test_citations.py  test_planner_and_validation.py  test_report_contract.py  test_research_service_utils.py  test_service_coverage.py  test_validation_reporting.py
docs/: api.md  architecture.md  demo-script.md  runbook.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  styles.css
frontend/src/components/: CitationSummary.jsx  ResultSourcesList.jsx
frontend/src/layouts/: AppLayout.jsx
(+10 files in other folders)
